<resources>
    <string name="app_name">Take Pic</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="hint_user">User Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="hint_serverName">Server Name</string>
    <string name="btn_saveAddress">UPDATE SERVER NAME</string>
    <string name="name">Fullname</string>

    <string name="btnTakePicture">Capture Image</string>
    <string name="btnUploadToServer">Upload to Server</string>
    <string name="btnRefresh">Refresh</string>


    <string name="result_image_desc">crop result</string>

    <string name="main_drawer_capture">Take Picture</string>
    <string name="main_drawer_load">Load Image Gallery</string>
    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="main_drawer_close">Close navigation drawer</string>

    <string name="main_action_crop">CROP</string>
    <string name="main_action_rotate">Rotate 90 degrees clockwise</string>
    <string name="drawer_option_title">Crop View Presets</string>
    <string name="drawer_option_oval">Circular</string>
    <string name="drawer_option_rect">Rectangular</string>
    <string name="drawer_option_logout">LOGOUT</string>
    <string name="drawer_option_min_max">Min/Max limits override</string>
    <string name="drawer_option_customized_overlay">Customized Overlay</string>
    <string name="drawer_option_scale_center">Scale Center Inside</string>
    <string name="drawer_option_title2">Customization Toggles</string>
    <string name="drawer_option_toggle_scale">Image Scale: %1s</string>
    <string name="drawer_option_toggle_shape">Crop Shape: %1s</string>
    <string name="drawer_option_toggle_guidelines">Guidelines: %1s</string>
    <string name="drawer_option_toggle_aspect_ratio">Aspect Ratio: %1s</string>
    <string name="drawer_option_toggle_auto_zoom">Auto zoom: %1s</string>
    <string name="drawer_option_toggle_max_zoom">Max zoom level: %1s</string>
    <string name="drawer_option_set_initial_crop_rect">Set initial crop rectangle</string>
    <string name="drawer_option_reset_crop_rect">Reset crop rectangle to initial</string>
    <string name="drawer_option_toggle_show_overlay">Show Overlay: %1s</string>
    <string name="drawer_option_toggle_show_progress_bar">Show Progress Bar: %1s</string>

</resources>
