<!--
<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        &lt;!&ndash; To display picture taken &ndash;&gt;


        <com.theartofdev.edmodo.cropper.CropImageView
            android:id="@+id/imgPreview"
            android:layout_width="fill_parent"
            android:layout_height="350dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="35dp"
            android:visibility="gone"/>

        &lt;!&ndash; Capture picture button &ndash;&gt;

        <Button
            android:id="@+id/btnCapturePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/btn_bg"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/btnTakePicture"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/btn_bg"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/btnUploadToServer"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</RelativeLayout>
-->

<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aledgroup.takepic.MainActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical">
        <!-- main content view. -->
        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="350dp">

        </FrameLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTemplate"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:text="127893.888393-893.00"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnRefresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/btn_login"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="15dp"
                android:text="@string/btnRefresh"
                android:textColor="@color/white"
                android:layout_alignTop="@+id/btnUpload"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/btnUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/btn_login"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginRight="15dp"
                android:text="@string/btnUploadToServer"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </android.support.v7.widget.LinearLayoutCompat>

    <!-- drawer view. -->
    <ScrollView
        android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#303030"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="@dimen/navigation_drawer_width"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="#303030"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/drawer_option_load"
                style="@style/Cropper.Widget.Drawer.Option.TextView"
                android:onClick="onDrawerOptionClicked"
                android:text="@string/main_drawer_load"/>

            <TextView
                android:id="@+id/drawer_option_capture"
                style="@style/Cropper.Widget.Drawer.Option.TextView"
                android:onClick="onDrawerOptionClicked"
                android:text="@string/main_drawer_capture"/>

            <View style="@style/Cropper.Widget.Drawer.Seperator"/>

            <TextView
                android:id="@+id/drawer_option_oval"
                style="@style/Cropper.Widget.Drawer.Option.TextView"
                android:onClick="onDrawerOptionClicked"
                android:text="@string/drawer_option_oval"/>

            <TextView
                android:id="@+id/drawer_option_rect"
                style="@style/Cropper.Widget.Drawer.Option.TextView"
                android:onClick="onDrawerOptionClicked"
                android:text="@string/drawer_option_rect"/>

            <View style="@style/Cropper.Widget.Drawer.Seperator"/>

            <TextView
                android:id="@+id/drawer_option_logout"
                style="@style/Cropper.Widget.Drawer.Option.TextView"
                android:onClick="onDrawerOptionClicked"
                android:text="@string/drawer_option_logout"/>
        </LinearLayout>
    </ScrollView>

</android.support.v4.widget.DrawerLayout>

